tests/errors/bad_return_type.ptt
foo() int { give "hello" }
spark { yell(foo()) }
